# hltv-scrapper

./: .gitignore  LICENSE  README.md  etl.py  main.py  pyproject.toml
scripts/: debug_fetch_match.py  debug_fetch_player_stats.py  debug_fetch_team_stats.py  debug_sample_matches.py  overview.py  scrape_player_stats.py  scrape_team_stats.py
src/hltv_scraper/: __init__.py  models.py  scraper.py
src/hltv_scraper/conf/: settings.py
src/hltv_scraper/modules/: README.md  common.py  match.py  results.py  scraper_maps.py  scraper_matches.py  scraper_stats.py
src/hltv_scraper/modules/overview/: checker.py
src/hltv_scraper/modules/results/: maps.py  matches.py  page.py  player_stats.py
src/hltv_scraper/modules/stats/: players.py  teams.py
src/hltv_scraper/pipeline/: overview.py  player_stats.py  results.py  team_stats.py
src/hltv_scraper/utils/: browser.py  html.py  log.py  parsers.py  storage.py
