[tool.poetry]
name = "hltv-scraper"
version = "0.1.0"
description = "Scraper de resultados do HLTV.org"
packages = [{include = "hltv_scraper", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
playwright = ">=1.44.0"
beautifulsoup4 = ">=4.12.0"
pydantic = ">=2.7.0"
polars = ">=1.0.0"
tqdm = ">=4.66.0"
camoufox = {version = ">=0.4.0", extras = ["geoip"]}
pyarrow = "^24.0.0"
pandas = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
jupyter = ">=1.0.0"
matplotlib = ">=3.8.0"
ipykernel = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
